UI Fix: Set width to stretch in archive pages.

--- a/_sass/layouts/archives/archive.scss
+++ b/_sass/layouts/archives/archive.scss
@@ -26,6 +26,7 @@
   align-items: center;
   justify-content: center;
   align-content: center;
+  align-self: stretch;
 }
 .archive-post-brief-container > .post-brief {
   align-self: stretch;
